added icon image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- Link to favicon -->
-    <link rel="shortcut icon" href="./Assets/ampersand.png" />
+    <link rel="shortcut icon" href="ampersand.png" />
     <!-- Bootstrap -->
     <link
     rel="stylesheet"
@@ -31,7 +31,7 @@
     rel="stylesheet"
     />
     <!-- CSS -->
-    <link rel="stylesheet" href="./Assets/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <!-- Date Picker -->
     <script src="https://cdn.syncfusion.com/ej2/dist/ej2.min.js"></script>
     <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">  
@@ -175,7 +175,7 @@
       
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./Assets/script.js"></script>
+    <script src="script.js"></script>
     <!-- <script src="script_future.js"></script> -->
   </body>
   </html>
